--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -22,6 +22,7 @@ button {
   font-size: 16pt;
   font-weight: 600;
   text-align: center;
+  cursor: pointer;
 }
 
 #counter {
@@ -33,4 +34,26 @@ button {
   align-items: center;
   margin: 0 20px;
   font-size: 16pt;
+}
+
+.text {
+  opacity: 0;
+  visibility: hidden;
+}
+
+div.text.show {
+  opacity: 1;
+  visibility: visible;
+  font-weight: bold;
+}
+
+.text2 {
+  opacity: 0;
+  visibility: hidden;
+}
+
+div.text2.show {
+  opacity: 1;
+  visibility: visible;
+  font-weight: bold;
 }
